# Python_basic

Python_basic-main/: README.md
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_03/store/: Products.py  main.py
